<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isAllFieldValid"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:fillViewport="true"
        android:foregroundGravity="center_horizontal"
        tools:context=".fragments.settings.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/any_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/any" />

                <RadioButton
                    android:id="@+id/custom_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_list_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <AutoCompleteTextView
                    android:id="@+id/category_list_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_category_hint"
                    android:inputType="none" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/category_list_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.chip.ChipGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flag_list_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_list_layout"
                app:placeholderText="Select flag(s) to be blacklisted">

                <AutoCompleteTextView
                    android:id="@+id/flag_list_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_flag_hint"
                    android:inputType="none" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/flag_list_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.chip.ChipGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@{isAllFieldValid?@color/purple_700:@color/material_on_primary_disabled}"
                android:enabled="@{isAllFieldValid}"
                android:text="@string/next"
                android:textColor="@{!isAllFieldValid?@color/purple_200:@color/white}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>